--- a/aceeditor-demo/pom.xml
+++ b/aceeditor-demo/pom.xml
@@ -2,9 +2,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.vaadin.addons</groupId>
+		<groupId>com.haulmont.thirdparty</groupId>
 		<artifactId>aceeditor-parent</artifactId>
-		<version>0.8.14-SNAPSHOT</version>
+		<version>0.8.14</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>aceeditor-demo</artifactId>
@@ -15,7 +15,7 @@
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<vaadin.version>7.1.8</vaadin.version>
+		<vaadin.version>7.4.0</vaadin.version>
 		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
 	</properties>
 
