--- a/aceeditor/pom.xml
+++ b/aceeditor/pom.xml
@@ -6,9 +6,9 @@
 	<packaging>jar</packaging>
 	<name>AceEditor</name>
 	<parent>
-		<groupId>org.vaadin.addons</groupId>
+		<groupId>com.haulmont.thirdparty</groupId>
 		<artifactId>aceeditor-parent</artifactId>
-		<version>0.8.14-SNAPSHOT</version>
+		<version>0.8.14</version>
 		<relativePath>..</relativePath>
 	</parent>
 
@@ -24,26 +24,31 @@
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-server</artifactId>
             <version>${vaadin.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-client-compiled</artifactId>
             <version>${vaadin.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-client</artifactId>
             <version>${vaadin.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-themes</artifactId>
             <version>${vaadin.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.4</version>
+            <scope>provided</scope>
         </dependency>
 	</dependencies>
 
